1998-12-17  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-app.c (gnome_app_realize): Simply show the dock, instead
	of showing_all.
	(gnome_app_set_contents): Show the contents.
	(gnome_app_set_menus): Show the dock item.  Put the dock item into a
	new dock band.  The menubar now goes into
	band 0 (instead of band -1).
	(gnome_app_add_toolbar): Put the dock item into a new dock band.
	The toolbar now goes into band 1 (instead of band 0).

1998-12-17  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app.c (gnome_app_set_menus): Make menubar relief agree
	with with toolbar relief (relief on the dock item, around
	handles).

Wed Dec 16 17:53:48 1998  Raph Levien  <raph@gimp.org>

	So far, no changes that affect canvas users or xlib custom items.

	* gnome-canvas-util.h:
	* gnome-canvas-util.c: Added a number of routines that are helpful
	for aa rendering.

	* gnome-canvas-rect-ellipse.c: re-enabled the rendering.

	* gnome-canvas.c: Provided default implementatoin of ::update ()
	
Thu Dec 17  Felix Bellaby  <felix@pooh.u-net.com>
	* gnome-client.c (gnome_client_connect, gnome_client_set_id): remove
	some code left over from old config file nameing scheme.

Wed Dec 16 11:51:23 1998  Raph Levien  <raph@gimp.org>

	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_render): Added
	alphagamma arg to rendering calls.

1998-12-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.[ch]: Misc. updates to accomodate the new rendering
	and propagation model.
	* gnome-canvas-rect-ellipse.c: Likewise.
	* gnome-canvas-image.c: Likewise.
	* gnome-canvas-text.c: Likewise.
	* gnome-canvas-line.c: Likewise.
	* gnome-canvas-polygon.c: Likewise.
	* gnome-canvas-widget.c: Likewise.
	* gnome-icon-item.c: Likewise.

1998-12-16  Yukihiro Nakai <Nakai@abricot.co.jp>

	* Added gtkrc.ja. The original gtkrc is not good for
	the multi-byte users.

1998-12-16  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock-item.c (gnome_dock_item_detach): Set the "transient